--- a/index.html
+++ b/index.html
@@ -23,91 +23,8 @@
       </nav>
     </header>
     <!-- /.site-header -->
-    <section class="wrapper">
-        <ul class="article-items">
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-
-            <li class="article-item">
-                <a href="#" class="article-item-link">
-                    <div class="header">
-                        <h3>Welcome to the New Google Design</h3>
-                    </div>
-                    <div class="img"></div>
-                </a>
-
-                <!-- /.img -->
-                <!-- /.header -->
-            </li>
-            <!-- /.article-item -->
-
-        </ul>
-        <!-- /.article-items -->
-    </section>
+    <div id="root"></div>
+    <!-- /#root -->
     <!-- /.wrapper -->
 
     <footer class="site-footer">
